added custom css

--- a/Virtual Environments Tutorial.ipynb
+++ b/Virtual Environments Tutorial.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       ".boxBorder {\n",
+       "     border: 2px solid #990066;\n",
+       "     padding: 10px;\n",
+       "     outline: #990066 solid 5px;\n",
+       "     outline-offset: 5px;\n",
+       "   }"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "\n",
+    "def set_css_style(css_file_path):\n",
+    "    \"\"\"\n",
+    "    Read the custom CSS file and load it into Jupyter.\n",
+    "    Pass the file path to the CSS file.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    styles = open(css_file_path, \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "\n",
+    "set_css_style('./static/custom/custom.css')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,11 +165,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## virtualenvwrapper\n",
+    "\n",
+    "All right, you might be asking yourself what happens when I have "
+   ]
   }
  ],
  "metadata": {
