finished skeleton of tutorial

--- a/Virtual Environments Tutorial.ipynb
+++ b/Virtual Environments Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,105 @@
    "source": [
     "## virtualenvwrapper\n",
     "\n",
-    "All right, you might be asking yourself what happens when I have "
+    "All right, you might be asking yourself what happens when I have so many virtual environments that jumping between them is like a nightmarescape of descent into the upside-down?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](static/hats.jpg \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well do I have the library for you!  It's called virtualenvwrapper (or virtualenvwrapper-win for windows) and it makes jumping between virtual environments as fast as your jetsetting 21st century lifestyle can handle.  \n",
+    "\n",
+    "Instead of putting a virtual env right next to the script, all your virtual environments are set up in one location which can be set via setting a `WORKON` environment variable, but the default location is `%USERPROFILE%/Envs`.  The call to create a project is a little different than venv.  \n",
+    "\n",
+    "After you pip install virtualenvwrapper-win (I've installed it on my global python, but you could easily make a venv to handle these things, as well as other general tasks like jupyter notebooks or pyinstaller, thus keeping your global python clean).  \n",
+    "\n",
+    "On the command line, you can just type: \n",
+    "\n",
+    "`mkvirtualenv <project-name>`\n",
+    "\n",
+    "and this will automatically create the environment and activate it.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](static/mkvirtualenv.jpg \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here, you can do all the things you would normally do in a virtual env, like pip install and deactivate and requirements and pip freeze, but the added benefits are now that you can see all your virtual envs with `lsvirtualenv`, or jump between them with the `workon <project-name>`, or remove unneeded items with `rmvirtualenv <project-name>`. \n",
+    "\n",
+    "One other cool feature is that you can also set a project directory, which, if you've ever had to muck with `sys.path` you'd know might be super helpful.  \n",
+    "\n",
+    "Imagine we have a app structure that looks like this: \n",
+    "\n",
+    "C:\\USERS\\MMCINTYRE\\DESKTOP\\MY-PROJECT\n",
+    "+---app\n",
+    "|       super-awesome-tool.py\n",
+    "|       __init__.py\n",
+    "|\n",
+    "+---tests\n",
+    "|       tests.py\n",
+    "|       __init__.py\n",
+    "|\n",
+    "\\---utils\n",
+    "        string-thing.py\n",
+    "        __init__.py\n",
+    "        \n",
+    "If we tried to import string-thing in super-awesome-tool, we'd run into an import error and need to set the sys.path to include the top-level directory, since if we look at the `sys.path` object, there is no reference to the my-project directory.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](static/syspath.jpg \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This means that import utils.string-thing doesn't work, but we can make it work!  All we need to do is run `setprojectdir` within the virtual environment we are working on, and the project directory is added to the sys.path attribute.  Just like that!  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](static/newsyspath.jpg \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This makes running tests easier, as you can import things from super-awesome-tool.py into tests.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, this brings us to the end of this quick overview.  Further topics of inquiry might be how to set PyCharm or Jupyter Notebooks to a new virtual env, or using pyenv or tox.  \n",
+    "\n",
+    "Here is some additional reading: \n",
+    "\n",
+    "- https://virtualenvwrapper.readthedocs.io/en/latest/command_ref.html\n",
+    "- https://docs.python.org/3/library/venv.html\n",
+    "- "
    ]
   }
  ],
