added last url for additonal reading

--- a/Virtual Environments Tutorial.ipynb
+++ b/Virtual Environments Tutorial.ipynb
@@ -266,9 +266,9 @@
     "\n",
     "Here is some additional reading: \n",
     "\n",
-    "- https://virtualenvwrapper.readthedocs.io/en/latest/command_ref.html\n",
-    "- https://docs.python.org/3/library/venv.html\n",
-    "- "
+    "- virtualenvwrapper commands -> https://virtualenvwrapper.readthedocs.io/en/latest/command_ref.html\n",
+    "- venv docs -> https://docs.python.org/3/library/venv.html\n",
+    "- pyenv tutorial -> https://amaral.northwestern.edu/resources/guides/pyenv-tutorial"
    ]
   }
  ],
